--- a/NEURODASH/assets/css/pages/home.css
+++ b/NEURODASH/assets/css/pages/home.css
@@ -1,73 +1,195 @@
+/* variables */
+:root {
+  --clr-gradiente: radial-gradient(
+    circle,
+    rgba(134, 8, 180, 1) 0%,
+    rgba(73, 47, 237, 1) 60%,
+    rgba(189, 111, 218, 1) 100%
+  );
+
+  --clr-gradiente-btn: linear-gradient(
+    270deg,
+    rgba(134, 8, 180, 1) 0%,
+    rgba(31, 215, 232, 0.873) 60%
+  );
+  --clr-botones: rgb(129, 110, 216);
+  --clr-text-podio: rgb(47, 216, 41);
+  --clr-notif: red;
+
+  --width: 20px;
+}
 /* -------------------- navbar --------------------  */
 
 /* iconos navbar */
-
-.icon-nav{
-  width: 24px; 
+.icon-nav {
+  width: var(--width);
   height: auto;
 }
-.icon-liga{
-  width: 80px;
-  height: 80px;
+.icon-liga {
+  width: calc(var(--width) * 4);
+  height: auto;
 }
 
-.icon-home{
-  height: 40px;
-  width: 40px;
+.icon-home {
+  height: calc(var(--width) * 2);
+  width: calc(var(--width)*2);
 }
 
-
-/* logo */
-.img-logo img {
-    width: 300px;
-    height: auto;
+.img-config img{
+  width: calc(var(--width)*2);
+  height: calc(var(--width)*2);
 }
+/* botones nav */
 
-/* input de la informacion del usuario  */
-.info input{
-  height: 2rem;
-  width: 15rem;
+/*Boton de notificaciones */
+.bell {
+  border: 2.17px solid white;
+  border-radius: 10px 10px 0 0;
+  width: 15px;
+  height: 17px;
+  background: transparent;
+  display: block;
+  position: relative;
+  top: -3px;
 }
-
-/* barra de progreso */
-.progress{
-  height: 1.5rem;
+.bell::before,
+.bell::after {
+  content: "";
+  background: white;
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 2.17px;
 }
+.bell::before {
+  top: 100%;
+  width: 20px;
+}
+.bell::after {
+  top: calc(100% + 4px);
+  width: 7px;
+}
+/*container main styling*/
+.notification {
+  background: transparent;
+  border: none;
+  padding: 10px 10px;
+  border-radius: 50px;
+  transition: 300ms;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/*campana notificaciones*/
+.notification::before {
+  content: "3";
+  color: white;
+  font-size: 10px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: var(--clr-notif);
+  position: absolute;
+  right: 1px;
+  top: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+/*container animations*/
+.notification:hover > .bell-container {
+  animation: bell-animation 650ms ease-out 0s 1 normal both;
+}
+/*bell ring and scale animation*/
+@keyframes bell-animation {
+  20% {
+    transform: rotate(15deg);
+  }
 
-/* letra del historia */
-.text-podio{
-    color: rgb(47, 216, 41);
+  40% {
+    transform: rotate(-15deg);
+    scale: 1.1;
+  }
+  60% {
+    transform: rotate(10deg);
+    scale: 1.1;
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 /* quitar las animaciones del navbar  */
-.navbar-toggler{
-  border: none;
-  font-size: 1.25rem;
-  /* background-color: blanchedalmond; */
-}
-.fondo-btn, .fondo-btn:hover{
-  background-color: rgb(129, 110, 216) !important;
-}
-
-.navbar-toggler:focus, .btn-close:focus{
+.navbar-toggler:focus {
   box-shadow: none;
   outline: none;
-
+}
+.fondo-btn,
+.fondo-btn:hover,
+.menu:hover {
+  background-color: var(--clr-botones) !important;
+  cursor: pointer;
+  border: none;
 }
 
-/* botones del home */
+/* extras del nav */
+
+/* barra de progreso */
+.progress {
+  height: 1.5rem;
+}
+
+/* width del menu flotante  */
+.menu-user {
+  width: 14rem;
+}
+
+/* letra del historia */
+.text-podio {
+  color: var(--clr-text-podio);
+}
+
+.menu {
+  border-radius: 7px;
+  background-color: #3b3b3b;
+}
+
+.bonos {
+  background-color: var(--clr-botones);
+  height: 90px;
+  width: 90px;
+}
+/* -------------------- fin navbar --------------------  */
+
+/* --------------------cuerpo del home--------------------  */
+
+/* logo Juego*/
+.img-logo img {
+  width: 350px;
+  height: auto;
+}
+
+/* boton-cartas */
 .btn-home {
   border: none;
   outline: none;
   border-radius: 0.4rem;
-  cursor: pointer;
+
   text-transform: uppercase;
-  background-color: rgb(134,8,180);
+  background-color: var(--clr-botones);
   color: rgb(234, 234, 234);
   font-weight: 700;
   transition: 0.6s;
   box-shadow: 0px 0px 60px #1f4c65;
-  -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+  -webkit-box-reflect: below 10px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
 }
 
 .btn-home:active {
@@ -75,104 +197,22 @@
 }
 
 .btn-home:hover {
-  background: rgb(2,29,78);
-  background: linear-gradient(270deg, rgba(134,8,180,1) 0%, rgba(31, 215, 232, 0.873) 60%);
+  background: var(--clr-gradiente-btn);
   color: rgb(4, 4, 38);
 }
 
-.menu{
-  border-radius: 10px;
-  background-color: #3b3b3b;
-}
+/* cartas home  */
 
-.menu:hover{
-  background-color: rgb(134,8,180);
-}
-
-.img-card-home{
-  object-fit: cover;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.card-img-top {
-  /* height: 13rem; */
-
-  padding: 1rem;
-  width: 220px;
-  
-}
-
-
-/* responsive */
-.main{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/* contenedor de las cartas */
+.main {
   min-height: 80vh;
-  overflow: hidden;
 }
 
-.swiper{
-  width: 100%;
-  padding:  50px 0;
+/* Estilos cartas modo de juego */
+.card-fondo {
+  background: var(--clr-gradiente);
 }
 
-
-.swiper-slide{
-  position: relative;
-  width: 300px;
-  height: 280px;
-  aspect-ratio: 3/4;
-  border-radius: 14px;
-  border:  1px solid rgb(177, 1777, 177, 0.4);
-}
-
-.swiper-slide img{
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-position: center center;
-  border-radius: inherit;
-  user-select: none;
-}
-
-.title{
-  position: absolute;
-  bottom: 5px;
-  left: 50%;
-  transform: translate(-50%, -20%);
-  -ms-transform: translate(-50%, -20%);
-  width: max-content;
-  text-align: center;
-  padding: 10px 10px;
-  background: rgba(46, 39, 39, 0.3);
-  border-radius: 8px;
-  border: 2px solid rgba(177, 177, 177, 0.4);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  transition: all 0.5s linear;
-  font-size: 14px;
-}
-
-.swiper-slide-active .title{
-  bottom: -10px;
-  
-}
-
-
-
-
-/* Estilos cartas modo de juego */ 
-
-.card-fondo{
-  
-  background: rgb(134,8,180);
-  background: radial-gradient(circle, rgba(134,8,180,1) 0%, rgba(73,47,237,1) 60%, rgba(189,111,218,1) 100%);
-
-}
 .card-home {
   border-radius: 10px;
   overflow: hidden;
@@ -180,9 +220,8 @@
   box-shadow: 0 0 0 5px #ffffff80;
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   padding: 0.5rem;
+}
 
-  }
-  
 .card-home img {
   height: 12rem;
   fill: #333;
@@ -192,6 +231,7 @@
 .card-home:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
+  cursor: pointer;
 }
 
 .card__content {
@@ -230,147 +270,81 @@
   line-height: 1.4;
 }
 
-
-/*Boton de notificaciones */
-.bell {
-  border: 2.17px solid white;
-  border-radius: 10px 10px 0 0; 
-  width: 15px;
-  height: 17px;
-  background: transparent;
-  display: block;
-  position: relative;
-  top: -3px;
+.img-card-home {
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5rem;
+  width: 200px;
 }
-.bell::before,
-.bell::after {
-  content: "";
-  background: white;
+
+/* cartas mobile */
+.swiper {
+  width: 100%;
+  padding: 50px 0;
+}
+
+.swiper-slide {
+  position: relative;
+  width: 260px;
+  height: 280px;
+  aspect-ratio: 3/4;
+  border-radius: 14px;
+  border: 1px solid rgb(177, 1777, 177, 0.4);
+}
+
+.swiper-slide img {
   display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-position: center center;
+  border-radius: inherit;
+  user-select: none;
+}
+
+.title {
   position: absolute;
+  bottom: 5px;
   left: 50%;
-  transform: translateX(-50%);
-  height: 2.17px;
-}
-.bell::before {
-  top: 100%;
-  width: 20px;
-}
-.bell::after {
-  top: calc(100% + 4px);
-  width: 7px;
-}
-/*container main styling*/
-.notification {
-  background: transparent;
-  border: none;
+  transform: translate(-50%, -20%);
+  -ms-transform: translate(-50%, -20%);
+  width: max-content;
+  text-align: center;
   padding: 10px 10px;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: 300ms;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: rgba(46, 39, 39, 0.3);
+  border-radius: 8px;
+  border: 2px solid rgba(177, 177, 177, 0.4);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  transition: all 0.5s linear;
+  font-size: 14px;
 }
 
-/*campana notificaciones*/
-.notification::before {
-  content: "1";
-  color: white;
-  font-size: 15px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: red;
-  position: absolute;
-  right: 2px;
-  top: 2px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+.swiper-slide-active .title {
+  bottom: -10px;
 }
-/*container background hover effect*/
-.notification:hover {
-  background: rgba(170, 170, 170, 0.062);
-}
-/*container animations*/
-.notification:hover > .bell-container {
-  animation: bell-animation 650ms ease-out 0s 1 normal both;
-}
-/*bell ring and scale animation*/
-@keyframes bell-animation {
-  20% {
-    transform: rotate(15deg);
-  }
 
-  40% {
-    transform: rotate(-15deg);
-    scale: 1.1;
+/* --------------------fin cuerpo del home-------------------- */
+
+/* responsive para el iphone de Jesus */
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+
+  .icon-home{
+    height: calc(var(--width) * 1.5);
   }
-  60% {
-    transform: rotate(10deg);
-    scale: 1.1;
+  .icon-liga{
+    height: calc(var(--width) * 3.5);
+    width: auto;
   }
-  80% {
-    transform: rotate(-10deg);
+  /* logo */
+  .img-logo img {
+    width: 200px;
+    height: auto;
   }
-  0%,
-  100% {
-    transform: rotate(0deg);
+  .swiper-slide {
+    width: 200px;
+    height: 220px;
   }
 }
-
-
-/* Boton de configuraciones */ 
-
-.setting-btn {
-  width: 60px;
-  height: 50px;
-  padding: 15px 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-  background-color: rgb(129, 110, 216);
-  border-radius: 10px;
-  cursor: pointer;
-  border: none;
-  box-shadow: 0px 0px 0px 2px rgb(212, 209, 255);
-}
-.bar {
-  width: 50%;
-  height: 2px;
-  background-color: rgb(229, 229, 229);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  border-radius: 2px;
-}
-.bar::before {
-  content: "";
-  width: 2px;
-  height: 2px;
-  background-color: rgb(126, 117, 255);
-  position: absolute;
-  border-radius: 50%;
-  border: 2px solid white;
-  transition: all 0.3s;
-  box-shadow: 0px 0px 5px white;
-}
-.bar1::before {
-  transform: translateX(-4px);
-}
-.bar2::before {
-  transform: translateX(4px);
-}
-.setting-btn:hover .bar1::before {
-  transform: translateX(4px);
-}
-.setting-btn:hover .bar2::before {
-  transform: translateX(-4px);
-}
-
