--- a/NEURODASH/assets/css/layout/grid.css
+++ b/NEURODASH/assets/css/layout/grid.css
@@ -4,3 +4,9 @@
     grid-template-columns: 20% 80%;
     gap: 5px;
 }
+
+.config-invitado{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
