--- a/NEURODASH/assets/css/utilities/utilices.css
+++ b/NEURODASH/assets/css/utilities/utilices.css
@@ -121,7 +121,8 @@
 }
 
 .size-icon-1{
-  width: 80px;
+  width: 70px;
+  cursor: pointer;
 }
 
 .center-element-x{
@@ -132,4 +133,33 @@
 .center-element-y{
   margin-left: auto;
   margin-right: auto;
+}
+
+.logo-inicio{
+  width: 400px;
+}
+
+.disabled{
+  /* opacity: 0; */
+  display: none;
+  /* visibility: hidden; */
+  /* position: absolute !important; */
+  /* transform: translateY(-100vh); */
+  pointer-events: none;
+}
+
+.interfaz-start{
+  /* pointer-events: none !important; */
+}
+
+.login-invit{
+
+}
+
+.img-global{
+  width: 100%;
+}
+
+.size-icon{
+
 }
