--- a/NEURODASH/views/Entramiento.html
+++ b/NEURODASH/views/Entramiento.html
@@ -7,17 +7,16 @@
     <link rel="icon" href="../assets/img/iconos-principales/rayo.icon">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
-    
+    <link rel="stylesheet" href="../lib/fontawesome/css/all.css">
+
   </head>
-<body class="backgound-start">
-  <div class="container-fluid">
+<body class="backgound-uno" style="overflow: hidden;">
+  <div class="container-fluid estilo">
     <div class="row">
       <div class="col-6 d-flex justify-content-start">
           <a href="" title="Configuraciones" class="hover-icons">
-            <img src="../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones fa-solid">
+            <img src="../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones">
           </a>
-          <!-- <button class="btn-confi">
-          </button> -->
       </div>
       <div class="col-6 d-flex justify-content-end">
             <a href="home.html" class="hover-icons">
@@ -27,7 +26,7 @@
     </div>
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
-        <img src="../assets/img/iconos/logo.png" alt="logo" class="logito-entrenamiento">
+        <img src="../assets/img/iconos-principales/dash.png" alt="logo" class="logito-entrenamiento">
       </div>
     </div>
     <div class="row">
@@ -64,11 +63,11 @@
       </div>
     </div>
   </div> 
+
   <script src="../lib/bootstrap/js/bootstrap.js"></script>
   <script src="../controller/entrenamiento/niveles.js"></script>
+  <script src="../assets/js/entrenamiento/animacion1.js"></script>
 </body>
 </html>
 
-   
-  
 
