--- a/NEURODASH/views/clasIficacion-entrenamiento.html
+++ b/NEURODASH/views/clasIficacion-entrenamiento.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="fondo-amarillo">
+<body class="backgound-cuatro">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 d-flex justify-content-center align-items-center position-relative">
-            <img src="../assets/img/iconos/logo.png" alt="logo" class="logito-entrenamiento2 overlap-img">
+            <img src="../assets/img/iconos-desarrollo/elefantePensado 1.png" alt="logo" class="logito-entrenamiento2 overlap-img">
         </div>
       </div>
       <div class="row">
@@ -42,9 +42,7 @@
             </div>
             <div class="row">
                 <div class="col-12 d-flex justify-content-center align-items-center position-relative">
-                  <a href="home.html" class="regresar">Regresar</a>  
-                    <!-- <button class="regresar">Regresar</button>    -->
-                                    
+                  <a href="home.html" class="regresar">Regresar</a>                                      
                 </div>
               </div>
             </div>
