--- a/NEURODASH/views/podio.html
+++ b/NEURODASH/views/podio.html
@@ -9,162 +9,122 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="backgound-podio">
-<div class="container-fluid d-flex align-items-center justify-content-center" style="height: 100vh;">
-    <div class="col-12">
+<body class="backgound-cinco">
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <img src="../assets/img/iconos-desarrollo/Ellipse 55.png" alt="logo" class="logito-podio">
+          </div>
+        </div>
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
-                <div class="card-podio">
-                    <div class="bg-podio uwu-podio"></div>
-                    <div class="bg-podio"></div>
-                    <div class="content-podio d-flex flex-column">
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <div class="podio-titulo2 d-flex justify-content-center" style="margin-bottom: 20px;"><h1>PODIO DE GANADORES</h1></div>
-                            </div>
+                <div class="card podio p-2" style="background-color: transparent; border-radius: 15px;">
+                        <div class="col-12 text-center">
+                            <span class="letter" data-letter="R">R</span>
+                            <span class="letter" data-letter="A">A</span>
+                            <span class="letter" data-letter="N">N</span>
+                            <span class="letter" data-letter="K">K</span>
+                            <span class="letter" data-letter="I">I</span>
+                            <span class="letter" data-letter="N">N</span>
+                            <span class="letter" data-letter="G">G</span>
+                            <span class="espacio-letter"></span>
+                            <span class="letter" data-letter="D">D</span>
+                            <span class="letter" data-letter="E">E</span>
+                            <span class="espacio-letter"></span>
+                            <span class="letter" data-letter="G">G</span>
+                            <span class="letter" data-letter="A">A</span>
+                            <span class="letter" data-letter="N">N</span>
+                            <span class="letter" data-letter="A">A</span>
+                            <span class="letter" data-letter="D">D</span>
+                            <span class="letter" data-letter="O">O</span>
+                            <span class="letter" data-letter="R">R</span>
+                            <span class="letter" data-letter="E">E</span>
+                            <span class="letter" data-letter="S">S</span>
+                        
                         </div>
 
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <div class="podio-titulo sepa d-flex align-items-center">
-                                    <div class="col-3 d-flex justify-content-start align-items-center">
-                                        <img src="../assets/img/iconos/corona.png" alt="corona ganador" class="coronita">
-                                    </div>
-                                    
-                                    <div class="col-5 d-flex justify-content-center">
-                                        <div class="icono-perfil d-flex justify-content-center align-items-center">
-                                            <div class="icono-perfil-square">
-                                                <img src="../assets/img/iconos/perfil1.png" alt="Icono Términos" class="coronita">
-                                            </div>
-                                        </div>
-                                        <div class="btn-IcoText ml-2 d-flex justify-content-center align-items-center">
-                                            <span>Jesus</span>
-                                        </div>
-                                    </div>
+                        <div class="col-12">
+                            <table class="table table-bordered tablePodio">
+                                <thead>
+                                  <tr class="text-center">
+                                    <th scope="col" >PUESTO</th>
+                                    <th scope="col">PERFIL</th>
+                                    <th scope="col">PUNTOS</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                    <tr style="text-align: center;">
+                                        <th scope="row">
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            1
+                                        </th>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                    </tr>
+                                
+                                    <tr style="text-align: center;">
+                                        <th scope="row">
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            1
+                                        </th>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                    </tr>
+                                
+                                    <tr style="text-align: center;">
+                                        <th scope="row">
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            1
+                                        </th>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                    </tr>
+                                
+                                    <tr style="text-align: center;">
+                                        <th scope="row">
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            1
+                                        </th>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                        <td>
+                                            <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                            Mark
+                                        </td>
+                                    </tr>
+                                
 
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <div class="d-flex align-items-center">
-                                            <span>2000</span>
-                                            <div class="icono-perfil d-flex justify-content-center align-items-center mt-2">
-                                                <div class="icono-perfil-square">
-                                                    <img src="../assets/img/iconos/cerebritos.png" alt="Icono Términos" class="coronita">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                
+                                </tbody>
+                            </table>
                         </div>
-
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <div class="podio-titulo sepa d-flex align-items-center">
-                                    <div class="col-3 d-flex justify-content-start align-items-center">
-                                        <img src="../assets/img/iconos/corona.png" alt="corona ganador" class="coronita">
-                                    </div>
-                                    
-                                    <div class="col-5 d-flex justify-content-center">
-                                        <div class="icono-perfil d-flex justify-content-center align-items-center">
-                                            <div class="icono-perfil-square">
-                                                <img src="../assets/img/iconos/perfil2.png" alt="Icono Términos" class="coronita">
-                                            </div>
-                                        </div>
-                                        <div class="btn-IcoText ml-2 d-flex justify-content-center align-items-center">
-                                            <span>Jesus</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <div class="d-flex align-items-center">
-                                            <span>2000</span>
-                                            <div class="icono-perfil d-flex justify-content-center align-items-center mt-2">
-                                                <div class="icono-perfil-square">
-                                                    <img src="../assets/img/iconos/cerebritos.png" alt="Icono Términos" class="coronita">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <div class="podio-titulo sepa d-flex align-items-center">
-                                    <div class="col-3 d-flex justify-content-start align-items-center">
-                                        <!-- <img src="../assets/img/iconos/corona.png" alt="corona ganador" class="coronita"> -->
-                                    </div>
-                                    
-                                    <div class="col-5 d-flex justify-content-center">
-                                        <div class="icono-perfil d-flex justify-content-center align-items-center">
-                                            <div class="icono-perfil-square">
-                                                <img src="../assets/img/iconos/perfil3.png" alt="Icono Términos" class="coronita">
-                                            </div>
-                                        </div>
-                                        <div class="btn-IcoText ml-2 d-flex justify-content-center align-items-center">
-                                            <span>Jesus</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <div class="d-flex align-items-center">
-                                            <span>2000</span>
-                                            <div class="icono-perfil d-flex justify-content-center align-items-center mt-2">
-                                                <div class="icono-perfil-square">
-                                                    <img src="../assets/img/iconos/cerebritos.png" alt="Icono Términos" class="coronita">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <div class="podio-titulo sepa d-flex align-items-center">
-                                    <div class="col-3 d-flex justify-content-start align-items-center">
-                                        <!-- <img src="../assets/img/iconos/corona.png" alt="corona ganador" class="coronita"> -->
-                                    </div>
-                                    
-                                    <div class="col-5 d-flex justify-content-center">
-                                        <div class="icono-perfil d-flex justify-content-center align-items-center">
-                                            <div class="icono-perfil-square">
-                                                <img src="../assets/img/iconos/perfil4.png" alt="Icono Términos" class="coronita">
-                                            </div>
-                                        </div>
-                                        <div class="btn-IcoText ml-2 d-flex justify-content-center align-items-center">
-                                            <span>Jesus</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-4 d-flex justify-content-center">
-                                        <div class="d-flex align-items-center">
-                                            <span>2000</span>
-                                            <div class="icono-perfil d-flex justify-content-center align-items-center mt-2">
-                                                <div class="icono-perfil-square">
-                                                    <img src="../assets/img/iconos/cerebritos.png" alt="Icono Términos" class="coronita">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center align-items-center p-2 ">
-                                <button id="verMas" class="verMas-btn">15 más...</button>
-                            </div>
-                        </div>
-
-                       
-
-                    </div>
+                    
+                               
+                
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
+    </div> 
 
 
 
