--- a/NEURODASH/views/tematicaEntrenamiento.html
+++ b/NEURODASH/views/tematicaEntrenamiento.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
     <script src="../controller/entrenamiento/modoJuego.js"></script>
 </head>
-<body class="backgound-start">
+<body class="backgound-uno">
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
@@ -26,14 +26,14 @@
             <div class="temario">
               <div class="row">
                 <div class="col-12 d-flex justify-content-center">
-                  <img src="../assets/img/iconos/cerebro-nuzit.png" alt="logo" class="logitoCerebro fa-bounce">
+                  <img src="../assets/img/iconos/elefante-entrenamiento.png" alt="logo" class="logitoCerebro">
                 </div>
               </div>
               <div class="row">
                 <div class="col-12 d-flex justify-content-center position-relative">
                   <div class="paralelogramo"><h5 class="titulo-tematica">TEMÁTICA DEL JUEGO</h5>
                 </div>
-                <div class="card categoria" style="width: 430px; background-color: #8080ff; border-radius: 15px;">
+                <div class="card categoria" style="width: 430px; background-color: #7878eeb6; border-radius: 15px;">
                   <!-- <div class="row">
                     <div class="col-12 d-flex justify-content-center">
                       <a class="categorias-button" href="terminosEntrenamiento.html">
@@ -67,6 +67,7 @@
     </div>
   </div>
   <script src="../lib/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/js/entrenamiento/tematica.js"></script>
 </body>
 </html>
 
