--- a/NEURODASH/views/terminosEntrenamiento.html
+++ b/NEURODASH/views/terminosEntrenamiento.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dificultad</title>
     <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon">
-
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
-</head>
-<body class="backgound-start">
-  <div class="container-fluid">
+    <link rel="stylesheet" href="../lib/fontawesome/css/all.css">
 
+</head>
+<body class="backgound-dos" style="overflow: hidden;">
+  <div class="container-fluid ">
     <div class="row">
       <div class="col-12 d-flex justify-content-start align-items-center">
         <a href="tematicaEntrenamiento.html"><img src="../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
@@ -21,13 +21,13 @@
     <div class="row">
         <div class="col-lg-4 col-12 d-flex align-items-center">
           <div class="col-12 d-flex justify-content-center align-items-center">
-            <img src="../assets/img/iconos/albert.png" alt="boton home" class="cerebroTerm">
+            <img src="../assets/img/iconos-desarrollo/terminos.png" alt="boton home" class="cerebroTerm">
           </div>
         </div>
         <div class="col-lg-8 col-12 d-flex align-items-center">
           <div class="col-12 d-flex justify-content-center position-relative ">
             <div class="paralelogramoTer"><h5 class="titulo-tematica">TÉRMINOS</h5></div>
-            <div class="card terminosCategoria" style="background-color: #8080ff; border-radius: 15px;">
+            <div class="card terminosCategoria" style="background-color: #88fa53e0; border-radius: 15px;">
               <div class="container">
                 <div class="row">
                   <div class="col-6 d-flex justify-content-center">
