--- a/NEURODASH/views/tutorialEntrenamiento.html
+++ b/NEURODASH/views/tutorialEntrenamiento.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="backgound-start">
+<body class="backgound-dos">
   <div class="container-fluid seccion active" id="tuto1">
     <div class="row">
       <div class="col-12">
@@ -22,37 +22,15 @@
             </div>
           </div>
           <div class="col-2 d-flex align-items-end">
-            <div class="col-12 d-flex justify-content-center ">
-                <button onclick= "showSection('tuto2')" class="button">
-                  <div class="bg"></div>
-                  <div class="wrap">
-                    <div class="outline"></div>
-                    <div class="content">
-                      <span class="char state-1">
-                        <span data-label="N" style="--i: 1">N</span>
-                        <span data-label="E" style="--i: 2">E</span>
-                        <span data-label="X" style="--i: 3">X</span>
-                        <span data-label="T" style="--i: 4">T</span>
-                      </span>
-                  
-                      <div class="icon">
-                        <div></div>
-                      </div>
-                  
-                      <span class="char state-2">
-                        <span data-label="N" style="--i: 1">N</span>
-                        <span data-label="E" style="--i: 2">E</span>
-                        <span data-label="X" style="--i: 3">X</span>
-                        <span data-label="T" style="--i: 4">T</span>
-                      </span>
-                    </div>
-                  </div>
+            <div class="col-12 d-flex justify-content-center">
+                <button onclick= "showSection('tuto2')" class="buttonNext">
+                    NEXT
                 </button>
             </div>
           </div>
           <div class="col-6 d-flex align-items-center" style="height: 100vh;">
               <div class="col-12 d-flex justify-content-center">
-                  <div class="card tutorial" style="width: 600px;  background-color: #131314a6; border-radius: 15px;">
+                  <div class="card tutorial" style="width: 600px;  background-color: #032738; border-radius: 15px;">
                       <div class="container">
                           <div class="row">
                               <div class="col-1 d-flex justify-content-center">
@@ -71,7 +49,7 @@
           </div>                    
           <div class="col-3 ">
             <div class="col-12 d-flex justify-content-center">
-              <img src="../assets/img/iconos/cerebroleyendo.png" alt="boton home" class="cerebro-leyendo">
+              <img src="../assets/img/iconos-desarrollo/neuroLeyendo 1.png" alt="boton home" class="cerebro-leyendo">
             </div>
           </div>
         </div>            
@@ -92,40 +70,16 @@
                 </div>
 
                 <div class="col-2 d-flex align-items-end">
-                    <div class="col-12 d-flex justify-content-center ">
-                      <a href="ronda1-entrenamiento.html">
-                        <button class="button">
-                          <div class="bg"></div>
-                          <div class="wrap">
-                            <div class="outline"></div>
-                            <div class="content">
-                              <span class="char state-1">
-                                <span data-label="N" style="--i: 1">N</span>
-                                <span data-label="E" style="--i: 2">E</span>
-                                <span data-label="X" style="--i: 3">X</span>
-                                <span data-label="T" style="--i: 4">T</span>
-                              </span>
-                          
-                              <div class="icon">
-                                <div></div>
-                              </div>
-                          
-                              <span class="char state-2">
-                                <span data-label="N" style="--i: 1">N</span>
-                                <span data-label="E" style="--i: 2">E</span>
-                                <span data-label="X" style="--i: 3">X</span>
-                                <span data-label="T" style="--i: 4">T</span>
-                              </span>
-                            </div>
-                          </div>
-                        </button>
+                    <div class="col-12 d-flex justify-content-center">
+                      <a href="ronda1-entrenamiento.html" class="buttonNext">
+                          NEXT
                       </a>        
                     </div>
                 </div>
 
                 <div class="col-6 d-flex align-items-center"  style="height: 100vh;">
                   <div class="cuadricula-gl">
-                    <div class="tutorial">
+                    <div class="tutorial"  style="width: 600px;  background-color: #032738; border-radius: 15px;">
                       <div class="container">
                         <div class="row">
                           <div class="col-1">
@@ -143,7 +97,7 @@
                     <div class="demostracion-bloque d-flex align-items-center">
                       <div class="col-12">
                         <div class="row">
-                          <div class="col-4 recuadro">CAMILA</div>
+                          <div class="col-4 recuadro deslizar">CAMILA</div>
                           <div class="col-4 d-flex align-items-center">
                               <div class="flecha"></div>
                           </div>
@@ -156,14 +110,14 @@
                 
                 <div class="col-3">
                   <div class="col-12 d-flex justify-content-center">
-                    <img src="../assets/img/iconos/cbro-estres.png" alt="boton home" class="cerebro-leyendo">
+                    <img src="../assets/img/iconos-desarrollo/elefantePensado 1.png" alt="boton home" class="cerebro-leyendo">
                   </div>
                 </div>                
             </div>            
         </div>
     </div>        
 </div>  
-<script src="../assets/js/entrenamiento/entrenamiento.js"></script>
+<script src="../assets/js/entrenamiento/animacionTutoriales.js"></script>
   <script src="../lib/bootstrap/js/bootstrap.js"></script>
 </body>
 </body>
