--- a/NEURODASH/assets/css/pages/entrenamiento.css
+++ b/NEURODASH/assets/css/pages/entrenamiento.css
@@ -14,13 +14,32 @@
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.671));
   }
 
+  .logito-podio{
+    margin-top: 15px;
+    width: 20%;
+    height: auto;
+    filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.671));
+    }
+  
 /* tematica entrenamiento */
 .logitoCerebro{
-  /* width: 20%; */
+  width: 30%;
   max-width: 200px;
   filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.911));
   position: relative;
   top: -20px;
+  animation: bounce 2s infinite;
+
+}
+
+
+@keyframes bounce {
+  0%, 100% {
+      transform: translateY(0);
+  }
+  50% {
+      transform: translateY(-10px);
+  }
 }
 
 /* tarjeta de tematica */
@@ -41,7 +60,7 @@
 /* paralelogramo categoria */
 .paralelogramoTer,
 .paralelogramo {
-  background: #bdc3c7;
+  /* background: #bdc3c7; */
   transform: skew(-20deg);
   position: absolute;
   z-index: 2;
@@ -49,38 +68,55 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px !important;
+  width: 300px !important;
   padding: 10px !important;
 }
 .paralelogramo{
-    background-color:  rgb(175, 204, 46);
+    background-color: #f5e024;
     box-shadow: 5px 5px 0 rgb(0, 0, 0);
     box-sizing: border-box;
-    width: 25%;
-    height: 20%;
-    top: -24px;
-    height: 70px ;
-    top: -50px;
+    height: 40px ;
+    top: -30px;
  
 }
 
 .paralelogramoTer {
     outline: 3px solid #000000;
-    background-color:#fc47aa;
+    background-color:#f5e024;
     box-shadow: 5px 5px 0 rgba(245, 246, 247, 0.877);
     width: 45%;
-    height: 10%; 
+    height: 8%; 
     top: -26px;
 
 }
 
-
 /* tematica de terminos*/ 
   .cerebroTerm{
-    width: 80%;
+    width: 60%;
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.911));
+    animation: flip-scale-2-hor-top 2s linear both;
   }
 
+  @keyframes flip-scale-2-hor-top {
+    0% {
+      -webkit-transform: translateY(0) rotateX(0) scale(1);
+              transform: translateY(0) rotateX(0) scale(1);
+      -webkit-transform-origin: 50% 0%;
+              transform-origin: 50% 0%;
+    }
+    50% {
+      -webkit-transform: translateY(0) rotateX(-180deg) scale(1);
+              transform: translateY(0) rotateX(-180deg) scale(1);
+      -webkit-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+    }
+    100% {
+      -webkit-transform: translateY(0) rotateX(-360deg) scale(1);
+              transform: translateY(0) rotateX(-360deg) scale(1);
+      -webkit-transform-origin: 50% 100%;
+              transform-origin: 50% 100%;
+    }
+  }
 
 
 .terminosCategoria {     
@@ -94,7 +130,7 @@
   box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
   border: 3px solid #000;
   outline: 3px solid #000000;
-  box-shadow: 7px 7px 0 #fc47aa;
+  box-shadow: 7px 7px 0 #f7e3ee;
   box-sizing: border-box;
   width: 80%;
 
@@ -137,25 +173,150 @@
 }
 
 /* rondas  */
-
-.timer2,
-.timer {
+.clock-container2,
+.clock-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  background-color: transparent;
-  box-shadow: 0px 3px 5px #d1cbcbc5 inset;
-  color: #ffffff;
+  justify-content: center;
+  position: relative;
+  background-color: #2c2c2c;
+  border-radius: 20px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 21px rgb(22, 18, 18);
+
+}
+
+.clock-container{
+  width: 250px;
+  height: 250px;
+}
+
+.clock-container2{
+  width: 200px;
+  height: 150px;
+}
+
+.clock-circle2,
+.clock-circle {
+  background-color: #3d3d3d;
+  border-radius: 50%;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 50px; /* Adjust the font size as needed */
-  text-align: center;
-  width: 30%; 
-  height: 20%;
+  top: -70px; 
+}
+
+.clock-circle{
+  width: 250px;
+  height: 200px;
+}
+
+.clock-circle2{
+  width: 200px;
+  height: 150px;
+}
+
+.clock-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover; 
+}
+
+.digital-clock2,
+.digital-clock {
+  font-size: 2rem;
+  color: white;
+  background-color: #2a2a2a;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+}
+
+.digital-clock{
+  margin-top: 120px;
+  padding: 10px 20px;
+
+}
+
+.digital-clock2{
+  margin-top: 70px;
+  padding-left: 2px;
+  padding-right: 2px;
+
+}
+
+.digital-clock2 span,
+.digital-clock span {
   font-weight: bold;
 }
+
+.digital-clock2 .minutes,
+.digital-clock .minutes {
+  color: #ffeb3b;
+}
+
+
+.digital-clock2 .puntitos,
+.digital-clock .puntitos {
+  color: #3b80ff;
+}
+
+.digital-clock2 .seconds,
+.digital-clock .seconds {
+  color: #4caf50;
+}
+
+
+/* From Uiverse.io by youngjid */ 
+.glitch {
+  position: relative;
+  font-size: 60px;
+  font-weight: bold;
+  color: #ee2cb4;
+  letter-spacing: 3px;
+  z-index: 1;
+  margin-bottom: 120px;
+}
+
+.glitch:before,
+.glitch:after {
+  display: block;
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+}
+
+.glitch:before {
+  animation: glitch-it 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+  color: #141d1d;
+  z-index: -1;
+}
+
+
+
+@keyframes glitch-it {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  to {
+    transform: translate(0);
+  }
+}
+
 
 .logitoRonda{
   width: 50%;
@@ -165,7 +326,7 @@
 }
 
 .Numeros{
-  width: 30%;
+  width: 40%;
   filter:drop-shadow(0 0 20px rgba(241, 238, 238, 0.911));
   margin-bottom: 5px;
 }
@@ -180,9 +341,22 @@
   box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
   /* outline: 3px solid #000000; */
   box-sizing: border-box;
-  box-shadow: 0 0 10px 8px #10fa71
-
+  box-shadow: 0 0 10px 8px #0a0a0a
   }
+
+  .podio {   
+    /* margin: 0;  */
+    border: none;
+    box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+    /* outline: 3px solid #000000; */
+    box-sizing: border-box;
+    box-shadow: 0 0 10px 8px #0a0a0a;
+     width:800px; 
+     max-height: 400px; 
+     overflow-y: auto;
+    
+    }
+
   
   .recuadros-items{
     width: 100%;
@@ -196,7 +370,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    background-color: #ff69b4
+    background-color: #fa5d7f
 
     /* background-color: #037df0; */;
     height: 50px;
@@ -204,12 +378,50 @@
     margin-top: 8px;
   }
 
-  .seccion {
+  /* .seccion {
     display: none;
   }
   .active {
     display: block;
+  } */
+
+.seccion {
+  display: none;
+  position: relative; 
+  overflow: hidden;
+}
+
+.active {
+  display: block;
+}
+
+.enter-animation {
+  animation: 2.5s cubic-bezier(.25, 1, .30, 1) circle-in-top-left both;
+}
+
+.exit-animation {
+  background-color: #10fa71;
+  animation: 2.5s cubic-bezier(.25, 1, .30, 1) circle-out-top-left both;
+}
+
+@keyframes circle-in-top-left {
+  from {
+      clip-path: circle(0% at top left); 
   }
+  to {
+      clip-path: circle(125%); 
+  }
+}
+
+@keyframes circle-out-top-left {
+  from {
+      clip-path: circle(125%); 
+  }
+  to {
+      clip-path: circle(0% at top left); 
+  }
+}
+
   
 .clasifi2,
 .clasifi{
@@ -225,7 +437,7 @@
   margin-bottom: 18px;
 }
 .clasifi2{
-  margin-top: 90px;
+  margin-top: 70px;
 
 }
 
@@ -249,7 +461,7 @@
 
 .card-clasi:hover{
   transition: all 0.2s cubic-bezier(0.175, 0.285, 0.82, 1.275);
-  box-shadow: 0px 0px 33px 0px hsl(216, 98%, 52%);
+  box-shadow: 0px 0px 33px 0px hsl(217, 25%, 94%);
 }
 
 .overlap-img {
@@ -260,95 +472,8 @@
 }
 
 /* From Uiverse.io by SelfMadeSystem */ 
-.card-podio {
-  position: relative;
-  width: 80%;
-  color: white;
-  background:#081023;
-  border-radius: 14px;
-}
-
-.bg-podio {
-  position: absolute;
-  z-index: -1;
-  inset: -4px;
-  border-radius: 16px;
-  overflow: hidden;
-}
-
-.uwu-podio {
-  filter: blur(8px);
-  transition: filter 0.3s;
-}
-
-.bg-podio::before {
-  content: '';
-  position: absolute;
-  aspect-ratio: 1/1;
-  top: 50%;
-  left: 50%;
-  min-width: 150%;
-  min-height: 150%;
-  background-image: conic-gradient(
-    hsl(0, 100%, 50%),
-    hsl(30, 100%, 50%),
-    hsl(60, 100%, 50%),
-    hsl(90, 100%, 50%),
-    hsl(120, 100%, 50%),
-    hsl(150, 100%, 50%),
-    hsl(180, 100%, 50%),
-    hsl(210, 100%, 50%),
-    hsl(240, 100%, 60%),
-    hsl(270, 100%, 50%),
-    hsl(300, 100%, 50%),
-    hsl(330, 100%, 50%),
-    hsl(360, 100%, 50%)
-  );
-  animation: speeen 4s linear infinite;
-  transform-origin: 0% 0%;
-  transform: rotate(0deg) translate(-50%, -50%);
-}
-
-@keyframes speeen {
-  from {
-    transform: rotate(0deg) translate(-50%, -50%);
-  }
-
-  to {
-    transform: rotate(360deg) translate(-50%, -50%);
-  }
-}
-
-.content-podio {
-  position: relative;
-  padding: 14px 16px;
-}
 
 
-
-.podio-titulo h1{
-  font-weight: bold;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-  color:#000;
-}
-
-
-
-.podio-titulo {
-
-  width: 60%;
-  background-color: #2576f0;
-  border-radius: 10px;
-
-}
-
-.podio-titulo2 h1{
-  width: 100%;
-  background-color: transparent;
-  border-radius: 10px;
-  font-weight: 800;
-  color: #10fa71;
-}
 
 .sepa{
   margin-top: 8px;
@@ -362,7 +487,6 @@
   max-width: 90%;
   height: auto;
 }
-
 
 
 
@@ -441,3 +565,49 @@
   
 }
 
+.rotate-center {
+  animation: flip-scale-up-hor 0.5s linear both;
+}
+
+@keyframes flip-scale-up-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+            transform: scale(1) rotateX(0);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(-360deg);
+            transform: scale(1) rotateX(-360deg);
+  }
+}
+
+
+.estilo {
+  transform: translateY(100%); 
+  transition: transform 2s ease; 
+
+}
+
+
+.estilo.animate{
+  transform: translateY(0);
+}
+
+.tablePodio {
+  border-radius: 10px; /* Radio de borde para redondear esquinas */
+  overflow: hidden; /* Asegura que los bordes redondeados se apliquen */
+  background: linear-gradient(to right, #4CAF50, #81C784); /* Fondo con degradado */
+  color: white; /* Color del texto */
+}
+
+
+.tablePodio th {
+  background-color: rgba(255, 255, 255, 0.2); /* Fondo semi-transparente para el encabezado */
+}
+
+.tablePodio tbody tr:nth-child(even) {
+  background-color: rgba(255, 255, 255, 0.1); /* Fondo alternativo para filas */
+}
+
+.tablePodio tbody tr:hover {
+  background-color: rgba(255, 255, 255, 0.2); /* Fondo al pasar el ratón */
+}
