--- a/NEURODASH/views/ronda1-entrenamiento.html
+++ b/NEURODASH/views/ronda1-entrenamiento.html
@@ -9,20 +9,28 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="fondo-amarillo"> 
+<body class="backgound-cuatro"> 
     <div class="container-fluid">
         <div class="row d-flex justify-content-center align-items-center vh-100">
-            <div class="col-md-6 d-flex justify-content-center align-items-center flex-column">
-                <div class="loader-reloj">
-                  <span></span>
-                  <div class="timer" id="timer">15</div>
-                </div>                
-
+            <div class="col-md-6 d-flex justify-content-center align-items-center flex-column vh-100">
+                <div class="glitch" data-text="A memorizar...">A memorizar...</div>
+                
+                  
+                <div class="clock-container">
+                    <div class="clock-circle">
+                        <img src="../assets/img/iconos-desarrollo/neuroLeyendo 1.png" alt="Image background" class="clock-image">
+                    </div>
+                    <div class="digital-clock">
+                        <span class="minutes" id="minutes">00</span> 
+                        <span class="puntitos">:</span> 
+                        <span class="seconds" id="seconds">15</span>
+                    </div>
+                </div>
             </div>
                 
             <div class="col-md-6 d-flex justify-content-center align-items-center flex-column vh-100">                
-                <img src="../assets/img/iconos/neuronas.png" alt="logo" class="Numeros">
-                <div class="card secuenciaTer" style="width: 530px; background-color:  #070c14; border-radius: 15px;">
+                <img src="../assets/img/iconos-principales/dash.png" alt="logo" class="Numeros">
+                <div class="card secuenciaTer" style="width: 530px; background-color:  #4287f500; border-radius: 15px;">
                     <div class="row">
                         <div class="col-4 d-flex justify-content-center">
                             <div class="recuadros-items">CDXLIV</div>                                   
